docker/kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/mlnetwork: "true"
        io.kompose.service: web
    spec:
      containers:
        - args:
            - mlflow
            - server
            - --backend-store-uri
            - mysql+pymysql://mlflow:weakpassword@db:3306/db
            - --default-artifact-root
            - s3://digits-recognizer-project/experiments
            - --host
            - 0.0.0.0
          image: mlflow_server
          name: mlflow-server
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
